--- a/index.html
+++ b/index.html
@@ -112,4 +112,23 @@
   <!-- Navigation -->
   <nav>
     <ul>
-      <li><a hr
+      <li><a href="#cakes">Cakes</a></li>
+      <li><a href="#icecreams">Ice Creams</a></li>
+      <li><a href="#reservations">Reservations</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About Us</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <video class="video-background" autoplay muted loop playsinline>
+      <source src="icecream-showcase.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay"></div>
+    <h1 class="hero-title">Dolcidea</h1>
+  </section>
+
+</body>
+</html>
