--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 
   <!-- Navigation -->
   <nav>
-    <ul>
-      <li><a href="#cakes">Cakes</a></li>
-      <li><a href="#icecreams">Ice Creams</a></li>
-      <li><a href="#reservations">Reservations</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About Us</a></li>
-    </ul>
-  </nav>
+  <ul>
+    <li><a href="cakes.html">Cakes</a></li>
+    <li><a href="icecreams.html">Ice Creams</a></li>
+    <li><a href="reservations.html">Reservations</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About Us</a></li>
+  </ul>
+</nav>
 
   <!-- Hero Section -->
   <section class="hero">
