--- a/about.html
+++ b/about.html
@@ -34,6 +34,16 @@
   </style>
 </head>
 <body>
+  <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="cakes.html">Cakes</a></li>
+    <li><a href="icecreams.html">Ice Creams</a></li>
+    <li><a href="reservations.html">Reservations</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About Us</a></li>
+  </ul>
+</nav>
   <section class="hero">
     <div class="text">
       <h1>About Dolcidea</h1>
