--- a/cakes.html
+++ b/cakes.html
@@ -46,6 +46,16 @@
   </style>
 </head>
 <body>
+  <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="cakes.html">Cakes</a></li>
+    <li><a href="icecreams.html">Ice Creams</a></li>
+    <li><a href="reservations.html">Reservations</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About Us</a></li>
+  </ul>
+</nav>
   <h1>Cakes Menu</h1>
   <section class="menu-section">
     <div class="menu-item">
