--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,16 @@
   </style>
 </head>
 <body>
+  <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="cakes.html">Cakes</a></li>
+    <li><a href="icecreams.html">Ice Creams</a></li>
+    <li><a href="reservations.html">Reservations</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About Us</a></li>
+  </ul>
+</nav>
   <section class="hero">
     <video class="video-background" autoplay muted loop>
       <source src="contact-video.mp4" type="video/mp4">
