--- a/cakes.html
+++ b/cakes.html
@@ -95,14 +95,14 @@ body {
   <h1>Cakes Menu</h1>
   <section class="menu-section">
     <div class="menu-item">
-      <img class="menu-img" src="cake1.jpg" alt="Cake 1">
+      <img class="menu-img" src="Strawberry_Cake.jpg" alt="Cake 1">
       <div class="menu-desc">
         <h2>Elegant Strawberry Cake</h2>
         <p>Fresh strawberries, fluffy sponge, and silky cream layers. Perfect for every celebration.</p>
       </div>
     </div>
     <div class="menu-item">
-      <img class="menu-img" src="cake2.jpg" alt="Cake 2">
+      <img class="menu-img" src="Chocolate_Cake.jpg" alt="Cake 2">
       <div class="menu-desc">
         <h2>Chocolate Fantasy</h2>
         <p>Rich dark chocolate layers with a light hazelnut cream filling. A delight for chocoholics.</p>
