--- a/icecreams.html
+++ b/icecreams.html
@@ -95,17 +95,17 @@ body {
   <h1>Ice Cream Menu</h1>
   <section class="menu-section">
     <div class="menu-item">
-      <img class="menu-img" src="vanilla.jpg" alt="Vanilla Ice Cream">
+      <img class="menu-img" src="Vanilla_Ice_Cream.jpg" alt="Vanilla Ice Cream">
       <div class="menu-desc">
         <h2>Classic Vanilla</h2>
         <p>Made from real vanilla pods and fresh cream, a timeless favorite for everyone.</p>
       </div>
     </div>
     <div class="menu-item">
-      <img class="menu-img" src="pistachio.jpg" alt="Pistachio Ice Cream">
+      <img class="menu-img" src="Pistachio_Ice_Cream.jpg" alt="Pistachio Ice Cream">
       <div class="menu-desc">
-        <h2>Sicilian Pistachio</h2>
-        <p>Authentic pistachios from Sicily blended into a smooth and creamy gelato.</p>
+        <h2>Pistachio</h2>
+        <p>Authentic pistachios blended into a smooth and creamy gelato.</p>
       </div>
     </div>
   </section>
