--- a/cakes.html
+++ b/cakes.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cakes - Dolcidea</title>
+<!-- Google Fonts -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
     .navbar {
   position: fixed;
@@ -47,6 +50,22 @@ body {
       background-color: #f5f5f5;
       margin: 0;
       padding: 2rem;
+    }
+
+
+    /* New h1 styling with gold outline and fancy font */
+    h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 4rem;
+      color: #2f2f2f;
+      text-align: center;
+      margin-bottom: 2rem;
+      text-shadow:
+        -1px -1px 0 #d4af37,
+         1px -1px 0 #d4af37,
+        -1px  1px 0 #d4af37,
+         1px  1px 0 #d4af37;
+      user-select: none;
     }
     .menu-section {
       display: flex;
