--- a/cakes.html
+++ b/cakes.html
@@ -67,6 +67,14 @@ body {
          1px  1px 0 #d4af37;
       user-select: none;
     }
+    h2 {
+  margin-bottom: 0.5rem;
+  text-shadow:
+    -1px -1px 0 #d4af37,
+     1px -1px 0 #d4af37,
+    -1px  1px 0 #d4af37,
+     1px  1px 0 #d4af37;
+}
     .menu-section {
       display: flex;
       flex-wrap: wrap;
