--- a/cakes.html
+++ b/cakes.html
@@ -125,14 +125,22 @@ body {
       <img class="menu-img" src="Strawberry_Cake.jpg" alt="Cake 1">
       <div class="menu-desc">
         <h2>Elegant Strawberry Cake</h2>
-        <p>Fresh strawberries, fluffy sponge, and silky cream layers. Perfect for every celebration.</p>
+        <p>Indulge in the sweet delight of our Fresh Strawberry Cake, a perfect blend of light, fluffy sponge layered with luscious whipped cream and juicy,
+          ripe strawberries. Each bite offers a refreshing burst of natural strawberry flavor, complemented by the cake’s moist texture and subtle sweetness.
+          Handcrafted with the finest ingredients, this cake is ideal for celebrations or a simple treat to brighten your day. Its vibrant red strawberries
+          not only add a fresh taste but also create an eye-catching presentation. Experience the taste of summer all year round with our irresistible Fresh
+          Strawberry Cake.</p>
       </div>
     </div>
     <div class="menu-item">
       <img class="menu-img" src="Chocolate_Cake.jpg" alt="Cake 2">
       <div class="menu-desc">
         <h2>Chocolate Fantasy</h2>
-        <p>Rich dark chocolate layers with a light hazelnut cream filling. A delight for chocoholics.</p>
+        <p>Dive into decadence with our rich, velvety Chocolate Cake, crafted for true chocolate lovers. This moist, tender cake is layered with smooth,
+          creamy chocolate ganache, delivering an intense cocoa flavor in every bite. Made from premium dark chocolate and fresh ingredients, it offers
+          a perfect balance of sweetness and deep chocolate richness. Ideal for birthdays, special occasions, or any moment that calls for indulgence,
+          our Chocolate Cake promises a melt-in-your-mouth experience. With its elegant finish and irresistible aroma, this cake is the ultimate treat
+          for anyone craving a luxurious chocolate escape.</p>
       </div>
     </div>
     <!-- Add more items as needed -->
