--- a/icecreams.html
+++ b/icecreams.html
@@ -98,14 +98,22 @@ body {
       <img class="menu-img" src="Vanilla_Ice_Cream.jpg" alt="Vanilla Ice Cream">
       <div class="menu-desc">
         <h2>Classic Vanilla</h2>
-        <p>Made from real vanilla pods and fresh cream, a timeless favorite for everyone.</p>
+        <p>Savor the classic, creamy delight of our Vanilla Ice Cream, made with pure vanilla beans and fresh cream for an irresistibly smooth texture.
+          Each scoop melts gently on your tongue, offering a perfect balance of rich, sweet vanilla flavor and velvety softness. Crafted with simple,
+          high-quality ingredients, this timeless treat brings comfort and joy in every bite. Whether enjoyed alone or paired with your favorite dessert,
+          our Vanilla Ice Cream is a refreshing indulgence that satisfies cravings and brightens any moment. Experience the pure essence of vanilla
+          in every creamy spoonful.</p>
       </div>
     </div>
     <div class="menu-item">
       <img class="menu-img" src="Pistachio_Ice_Cream.jpg" alt="Pistachio Ice Cream">
       <div class="menu-desc">
         <h2>Pistachio</h2>
-        <p>Authentic pistachios blended into a smooth and creamy gelato.</p>
+        <p>Discover the nutty elegance of our Pistachio Ice Cream, where creamy richness meets the distinct, subtly sweet flavor of roasted pistachios.
+          Made with premium pistachio nuts and fresh cream, this ice cream boasts a smooth, luxurious texture with just the right amount of natural crunch.
+          Its delicate green hue invites you to enjoy a sophisticated treat that’s both refreshing and indulgent. Perfect for those seeking a unique,
+          flavorful dessert, our Pistachio Ice Cream offers a harmonious blend of creamy sweetness and earthy nuttiness in every spoonful.
+          A true delight for nut lovers.</p>
       </div>
     </div>
   </section>
