--- a/icecreams.html
+++ b/icecreams.html
@@ -54,6 +54,27 @@ body {
       gap: 2rem;
       justify-content: center;
     }
+    h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 4rem;
+      color: #2f2f2f;
+      text-align: center;
+      margin-bottom: 2rem;
+      text-shadow:
+        -1px -1px 0 #d4af37,
+         1px -1px 0 #d4af37,
+        -1px  1px 0 #d4af37,
+         1px  1px 0 #d4af37;
+      user-select: none;
+    }
+    h2 {
+  margin-bottom: 0.5rem;
+  text-shadow:
+    -1px -1px 0 #d4af37,
+     1px -1px 0 #d4af37,
+    -1px  1px 0 #d4af37,
+     1px  1px 0 #d4af37;
+}
     .menu-item {
       display: flex;
       background: white;
