--- a/reservations.html
+++ b/reservations.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservations - Dolcidea</title>
+  <!-- Google Fonts for a fancier font -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
     .navbar {
   position: fixed;
@@ -40,13 +42,32 @@
 
 body {
   padding-top: 80px; /* To prevent navbar from overlapping content */
-}
-
-    body {
+  font-family: 'Quicksand', sans-serif;
+  background-color: #f5f5f5;
+  padding: 2rem;
+    }
+     body {
+      padding-top: 80px; /* To prevent navbar from overlapping content */
       font-family: 'Quicksand', sans-serif;
       background-color: #f5f5f5;
       padding: 2rem;
     }
+
+    /* Centered h1 with golden outline */
+    h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 4rem;
+      color: #2f2f2f;
+      text-align: center;
+      margin-bottom: 2rem;
+      text-shadow:
+        -1px -1px 0 #d4af37,
+         1px -1px 0 #d4af37,
+        -1px  1px 0 #d4af37,
+         1px  1px 0 #d4af37;
+      user-select: none;
+    }
+
     form {
       background: white;
       padding: 2rem;
