--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Dolcidea</title>
+   <!-- Google Fonts for a fancier font -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
+
   <style>
     .navbar {
   position: fixed;
@@ -40,12 +43,9 @@
 
 body {
   padding-top: 80px; /* To prevent navbar from overlapping content */
-}
-
-    body {
-      font-family: 'Quicksand', sans-serif;
-      margin: 0;
-      background: #f5f5f5;
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  background: #f5f5f5;
     }
     .hero {
       display: flex;
@@ -63,9 +63,18 @@ body {
       width: 50%;
       padding-right: 2rem;
     }
-    h1 {
-      font-size: 3rem;
+   h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 3.5rem;
       margin-bottom: 1rem;
+      text-align: center;
+      color: #2f2f2f;
+      text-shadow:
+        -1px -1px 0 #d4af37,
+         1px -1px 0 #d4af37,
+        -1px  1px 0 #d4af37,
+         1px  1px 0 #d4af37;
+      user-select: none;
     }
   </style>
 </head>
