--- a/cakes.html
+++ b/cakes.html
@@ -143,6 +143,27 @@ body {
           for anyone craving a luxurious chocolate escape.</p>
       </div>
     </div>
+    <div class="menu-item">
+      <img class="menu-img" src="Lemon_Cake.jpg" alt="Cake 1">
+      <div class="menu-desc">
+        <h2>Lemon Cake</h2>
+        <p>Bright, zesty, and refreshingly light — our Lemon Cake is the perfect balance of sweet and citrusy. Made with fresh lemon juice and zest,
+          this moist, fluffy cake delivers a burst of tangy flavor in every bite. It’s layered with smooth lemon cream or glaze that enhances its
+          vibrant character while keeping it delightfully soft. Whether enjoyed with a cup of tea or as a sunny treat on a warm day, this cake brings
+          a cheerful twist to any occasion. Its delicate aroma and elegant look make it as irresistible as it is uplifting.</p>
+      </div>
+      </div>
+      <div class="menu-item">
+      <img class="menu-img" src="Red_Velvet_Cake.jpg" alt="Cake 1">
+      <div class="menu-desc">
+        <h2>Red Velvet Cake</h2>
+        <p>Elegant, rich, and irresistibly smooth — our Red Velvet Cake is a timeless classic. With its striking red hue and subtle cocoa flavor,
+          this cake is layered with a luscious cream cheese frosting that adds the perfect hint of tang. The velvety texture and balanced sweetness
+          make it a sophisticated choice for birthdays, anniversaries, or any moment worth celebrating. Crafted with care and high-quality ingredients,
+          every slice is as beautiful as it is delicious. Whether you're indulging yourself or sharing with someone special, our Red Velvet Cake offers
+          a luxurious experience with every bite..</p>
+      </div>
+        </div>
     <!-- Add more items as needed -->
   </section>
 </body>
