--- a/icecreams.html
+++ b/icecreams.html
@@ -139,6 +139,41 @@ body {
           A true delight for nut lovers.</p>
       </div>
     </div>
+     <div class="menu-item">
+      <img class="menu-img" src="Chocolate_Ice_Cream.jpg" alt="Vanilla Ice Cream">
+      <div class="menu-desc">
+        <h2>Chocolate</h2>
+        <p> Indulge in the rich, velvety goodness of our Chocolate Ice Cream — a timeless favorite made with premium cocoa and fresh cream.
+          Each spoonful offers a deep, satisfying chocolate flavor with a luxuriously smooth texture that melts in your mouth. Crafted in
+          small batches to preserve its intense taste and creamy consistency, it’s the ultimate treat for true chocolate lovers. Whether enjoyed
+          alone or paired with other desserts, this classic flavor never fails to delight. Pure, bold, and perfectly sweet, our Chocolate Ice Cream
+          is a comforting and indulgent escape in every bite.
+        </p>
+      </div>
+    </div>
+     <div class="menu-item">
+      <img class="menu-img" src="Nutella_Ice_Cream.jpg" alt="Vanilla Ice Cream">
+      <div class="menu-desc">
+        <h2>Nutella</h2>
+        <p>reat yourself to the irresistible taste of our Nutella Ice Cream, where creamy hazelnut spread meets rich chocolate in a dreamy frozen dessert.
+          Made with real Nutella and fresh ingredients, this smooth and decadent ice cream delivers the beloved hazelnut-chocolate flavor you know and
+          love in every spoonful. Its silky texture and nutty sweetness make it a standout choice for those craving something uniquely indulgent.
+          Swirled with ribbons of Nutella for an extra touch of delight, this flavor is pure bliss — perfect for chocolate lovers, hazelnut fans,
+          or anyone who appreciates a luxurious ice cream experience.
+        </p>
+      </div>
+    </div>
+     <div class="menu-item">
+      <img class="menu-img" src="Lemon_Ice_Cream.jpg" alt="Vanilla Ice Cream">
+      <div class="menu-desc">
+        <h2>Lemon</h2>
+        <p>Refresh your palate with our bright and tangy Lemon Ice Cream, a zesty twist on traditional frozen treats. Made with real lemon juice and zest,
+          it offers a naturally fresh flavor with just the right balance of sweetness and citrus. Light, creamy, and perfectly smooth, this ice cream is
+          ideal for warm days or as a refreshing finish to any meal. Its clean, uplifting taste awakens the senses and leaves a cool, invigorating impression.
+          Simple yet sophisticated, our Lemon Ice Cream brings a touch of sunshine to every scoop — a truly revitalizing dessert experience.
+        </p>
+      </div>
+    </div>
   </section>
 </body>
 </html>
