--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <video class="video-background" autoplay muted loop playsinline>
-      <source src="icecream-showcase.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-    <div class="overlay"></div>
-    <h1 class="hero-title">Dolcidea</h1>
+  <div class="menu-item">
+      <img class="menu-img" src="shop.jpg" alt="shop">
+      <div class="overlay"></div>
+    <h1 class="hero-title">Dolcidea</h1>   
+      </div>
   </section>
 
 </body>
