--- a/index.html
+++ b/index.html
@@ -55,15 +55,16 @@
     .hero {
       position: relative;
       height: 100vh;
-      overflow: hidden;
+      width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
+      overflow: hidden;
     }
 
-    .video-background {
-      position: fixed;
+    .menu-img {
+      position: absolute;
       top: 0;
       left: 0;
       width: 100vw;
@@ -73,12 +74,12 @@
     }
 
     .overlay {
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.35); /* dark gray transparent overlay */
+      background: rgba(0, 0, 0, 0.35); /* semi-transparent dark overlay */
       z-index: -1;
     }
 
@@ -111,22 +112,20 @@
 
   <!-- Navigation -->
   <nav>
-  <ul>
-    <li><a href="cakes.html">Cakes</a></li>
-    <li><a href="icecreams.html">Ice Creams</a></li>
-    <li><a href="reservations.html">Reservations</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="about.html">About Us</a></li>
-  </ul>
-</nav>
+    <ul>
+      <li><a href="cakes.html">Cakes</a></li>
+      <li><a href="icecreams.html">Ice Creams</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About Us</a></li>
+    </ul>
+  </nav>
 
   <!-- Hero Section -->
   <section class="hero">
-  <div class="menu-item">
-      <img class="menu-img" src="shop.jpg" alt="shop">
-      <div class="overlay"></div>
-    <h1 class="hero-title">Dolcidea</h1>   
-      </div>
+    <img class="menu-img" src="shop.jpg" alt="shop">
+    <div class="overlay"></div>
+    <h1 class="hero-title">Dolcidea</h1>
   </section>
 
 </body>
