--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ body {
         Whether you’re enjoying a casual treat, celebrating with friends, or discovering new flavors, Dolcidea invites you to experience the magic of 
         Italian gelato craftsmanship. Come visit us and taste the sweetness of tradition, passion, and creativity — only at Dolcidea.</p>
     </div>
-    <img src="about-image.jpg" alt="Gelateria Interior">
+    <img src="shop.jpg" alt="Gelateria Interior">
   </section>
 </body>
 </html>
