--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>More actions
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -15,8 +15,8 @@
     html, body {
       height: 100%;
       font-family: 'Quicksand', sans-serif;
-      background-color: #f5f5f5;
-      color: #2f2f2f;
+      background-color: #fff0f5;
+      color: #444;
       scroll-behavior: smooth;
     }
 
@@ -25,11 +25,11 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(255, 240, 245, 0.9);
       display: flex;
       justify-content: center;
       padding: 1rem 2rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       z-index: 1000;
     }
 
@@ -41,14 +41,14 @@
 
     nav ul li a {
       text-decoration: none;
-      color: #f5f5f5;
+      color: #d24dff;
       font-weight: 600;
       font-size: 1.1rem;
       transition: color 0.3s ease;
     }
 
     nav ul li a:hover {
-      color: #d4af37; /* Elegant gold */
+      color: #ff77dd;
     }
 
     /* Hero Section */
@@ -56,18 +56,14 @@
       position: relative;
       height: 100vh;
       overflow: hidden;
-      width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
-      overflow: hidden;
     }
 
     .video-background {
       position: fixed;
-    .menu-img {
-      position: absolute;
       top: 0;
       left: 0;
       width: 100vw;
@@ -78,25 +74,22 @@
 
     .overlay {
       position: fixed;
-      position: absolute;
-      top: 0;
-      left: 0;
+      top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.35); /* dark gray transparent overlay */
-      background: rgba(0, 0, 0, 0.35); /* semi-transparent dark overlay */
+      background: rgba(255, 240, 245, 0.3);
       z-index: -1;
     }
 
     .hero-title {
       font-family: 'Great Vibes', cursive;
       font-size: 7rem;
-      color: #ffffff;
+      color: #fff8dc;
       text-shadow:
-        -1px -1px 0 #d4af37,
-         1px -1px 0 #d4af37,
-        -1px  1px 0 #d4af37,
-         1px  1px 0 #d4af37;
+        -1px -1px 0 #daa520,
+         1px -1px 0 #daa520,
+        -1px  1px 0 #daa520,
+         1px  1px 0 #daa520;
       z-index: 1;
       user-select: none;
     }
@@ -117,31 +110,21 @@
 
   <!-- Navigation -->
   <nav>
-  <ul>
-    <li><a href="cakes.html">Cakes</a></li>
-    <li><a href="icecreams.html">Ice Creams</a></li>
-    <li><a href="reservations.html">Reservations</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="about.html">About Us</a></li>
-  </ul>
-</nav>
     <ul>
-      <li><a href="cakes.html">Cakes</a></li>
-      <li><a href="icecreams.html">Ice Creams</a></li>
-      <li><a href="reservations.html">Reservations</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="about.html">About Us</a></li>
+      <li><a href="#cakes">Cakes</a></li>
+      <li><a href="#icecreams">Ice Creams</a></li>
+      <li><a href="#reservations">Reservations</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About Us</a></li>
     </ul>
   </nav>
 
   <!-- Hero Section -->
   <section class="hero">
-  <div class="menu-item">
-      <img class="menu-img" src="shop.jpg" alt="shop">
-      <div class="overlay"></div>
-    <h1 class="hero-title">Dolcidea</h1>   
-      </div>
-    <img class="menu-img" src="shop.jpg" alt="shop">
+    <video class="video-background" autoplay muted loop playsinline>
+      <source src="icecream-showcase.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
     <div class="overlay"></div>
     <h1 class="hero-title">Dolcidea</h1>
   </section>
