--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     html, body {
       height: 100%;
       font-family: 'Quicksand', sans-serif;
-      background-color: #fff0f5;
-      color: #444;
+      background-color: #f5f5f5;
+      color: #2f2f2f;
       scroll-behavior: smooth;
     }
 
@@ -25,11 +25,11 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(255, 240, 245, 0.9);
+      background: rgba(0, 0, 0, 0.85);
       display: flex;
       justify-content: center;
       padding: 1rem 2rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       z-index: 1000;
     }
 
@@ -41,14 +41,14 @@
 
     nav ul li a {
       text-decoration: none;
-      color: #d24dff;
+      color: #f5f5f5;
       font-weight: 600;
       font-size: 1.1rem;
       transition: color 0.3s ease;
     }
 
     nav ul li a:hover {
-      color: #ff77dd;
+      color: #d4af37; /* Elegant gold */
     }
 
     /* Hero Section */
@@ -74,22 +74,23 @@
 
     .overlay {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255, 240, 245, 0.3);
+      background: rgba(0, 0, 0, 0.35); /* dark gray transparent overlay */
       z-index: -1;
     }
 
     .hero-title {
       font-family: 'Great Vibes', cursive;
       font-size: 7rem;
-      color: #fff8dc;
+      color: #ffffff;
       text-shadow:
-        -1px -1px 0 #daa520,
-         1px -1px 0 #daa520,
-        -1px  1px 0 #daa520,
-         1px  1px 0 #daa520;
+        -1px -1px 0 #d4af37,
+         1px -1px 0 #d4af37,
+        -1px  1px 0 #d4af37,
+         1px  1px 0 #d4af37;
       z-index: 1;
       user-select: none;
     }
