--- a/index.html
+++ b/index.html
@@ -1,105 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dolcidea</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cakes – Dolcidea</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap"
+    rel="stylesheet"
+  />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    /* Reset & base styles */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body { height: 100%; font-family: 'Quicksand', sans-serif; background: #f5f5f5; color: #2f2f2f; scroll-behavior: smooth; }
+    body { padding-top: 80px; }
 
-    html, body {
-      height: 100%;
-      font-family: 'Quicksand', sans-serif;
-      background-color: #f5f5f5;
-      color: #2f2f2f;
-      scroll-behavior: smooth;
-    }
-
-    /* Navbar */
+    /* Navigation bar */
     nav {
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(0,0,0,0.85);
       display: flex;
       justify-content: center;
       padding: 1rem 2rem;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       z-index: 1000;
     }
-
     nav ul {
       display: flex;
-      list-style: none;
       gap: 2rem;
+      list-style: none;
     }
-
     nav ul li a {
-      text-decoration: none;
       color: #f5f5f5;
+      text-decoration: none;
       font-weight: 600;
       font-size: 1.1rem;
-      transition: color 0.3s ease;
+      transition: color 0.3s;
     }
-
     nav ul li a:hover {
-      color: #d4af37; /* Elegant gold */
+      color: #d4af37;
     }
 
-    /* Hero Section */
-    .hero {
-      position: relative;
-      height: 100vh;
-      overflow: hidden;
+    /* Cakes section */
+    .container { max-width: 1200px; margin: 0 auto; padding: 2rem; }
+    h1 { margin-bottom: 1.5rem; text-align: center; }
+
+    .menu-section {
       display: flex;
-      align-items: center;
+      flex-wrap: wrap;
+      gap: 2rem;
       justify-content: center;
-      text-align: center;
     }
-
-    .video-background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -2;
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
+    .menu-item {
+      display: flex;
       width: 100%;
+      max-width: 800px;
+      background: #fff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      overflow: hidden;
+    }
+    .menu-item:nth-child(even) { flex-direction: row-reverse; }
+    .menu-img {
+      width: 50%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.35); /* dark gray transparent overlay */
-      z-index: -1;
+      object-fit: cover;
     }
-
-    .hero-title {
-      font-family: 'Great Vibes', cursive;
-      font-size: 7rem;
-      color: #ffffff;
-      text-shadow:
-        -1px -1px 0 #d4af37,
-         1px -1px 0 #d4af37,
-        -1px  1px 0 #d4af37,
-         1px  1px 0 #d4af37;
-      z-index: 1;
-      user-select: none;
+    .menu-desc {
+      width: 50%;
+      padding: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
+    .menu-desc h2 { margin-bottom: 0.75rem; font-size: 1.5rem; }
+    .menu-desc p { font-size: 1rem; line-height: 1.5; }
 
     @media (max-width: 768px) {
-      .hero-title {
-        font-size: 4rem;
+      .menu-item {
+        flex-direction: column !important;
       }
-
+      .menu-img, .menu-desc {
+        width: 100%;
+      }
       nav ul {
         flex-direction: column;
         gap: 1rem;
@@ -112,23 +96,37 @@
   <!-- Navigation -->
   <nav>
     <ul>
-      <li><a href="#cakes">Cakes</a></li>
-      <li><a href="#icecreams">Ice Creams</a></li>
-      <li><a href="#reservations">Reservations</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About Us</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="cakes.html" aria-current="page">Cakes</a></li>
+      <li><a href="icecreams.html">Ice Creams</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </nav>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <video class="video-background" autoplay muted loop playsinline>
-      <source src="icecream-showcase.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-    <div class="overlay"></div>
-    <h1 class="hero-title">Dolcidea</h1>
-  </section>
+  <div class="container">
+    <h1>Cakes Menu</h1>
+    <section class="menu-section">
+      <div class="menu-item">
+        <img class="menu-img" src="cake1.jpg" alt="Elegant Strawberry Cake">
+        <div class="menu-desc">
+          <h2>Elegant Strawberry Cake</h2>
+          <p>Fresh strawberries, fluffy sponge, and silky cream layers. Perfect for every celebration.</p>
+        </div>
+      </div>
+
+      <div class="menu-item">
+        <img class="menu-img" src="cake2.jpg" alt="Chocolate Fantasy">
+        <div class="menu-desc">
+          <h2>Chocolate Fantasy</h2>
+          <p>Rich dark chocolate layers with a light hazelnut cream filling. A delight for chocoholics.</p>
+        </div>
+      </div>
+
+      <!-- Add more cake items as needed -->
+    </section>
+  </div>
 
 </body>
 </html>
