--- a/about.html
+++ b/about.html
@@ -37,9 +37,17 @@
   <section class="hero">
     <div class="text">
       <h1>About Dolcidea</h1>
-      <p>At Dolcidea, we believe in the magic of tradition blended with creativity. Founded in 1985, our gelateria has become a beloved destination for those seeking artisanal desserts made with passion and love. From creamy gelato to custom celebration cakes, every bite tells a story of dedication and quality.</p>
+      <p>Welcome to Dolcidea, your sweet escape into the world of authentic Italian gelato. At Dolcidea, we believe that every scoop tells a story — 
+        a story of passion, tradition, and the finest ingredients lovingly transformed into creamy masterpieces. Located in the heart of the city, 
+        Dolcidea offers a warm and inviting atmosphere where gelato lovers can indulge in an unforgettable sensory experience. Our gelato is handcrafted
+        daily using traditional Italian recipes combined with the freshest local and imported ingredients. From classic favorites like creamy vanilla and
+        intense chocolate to vibrant fruit sorbets and innovative seasonal flavors, each batch is made in small quantities to ensure peak freshness and flavor.
+        At Dolcidea, quality is our promise: we use natural ingredients with no artificial colors or preservatives, allowing the true essence of each flavor 
+        to shine through. Complement your gelato with our crispy, freshly made waffle cones or try our delightful selection of toppings and accompaniments.
+        Whether you’re enjoying a casual treat, celebrating with friends, or discovering new flavors, Dolcidea invites you to experience the magic 
+        of Italian gelato craftsmanship. Come visit us and taste the sweetness of tradition, passion, and creativity — only at Dolcidea.</p>
     </div>
-    <img src="about-image.jpg" alt="Gelateria Interior">
+    <img src="shop.jpg" alt="Gelateria Interior">
   </section>
 </body>
 </html>
