--- a/index.html
+++ b/index.html
@@ -1,50 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cakes – Dolcidea</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap"
-    rel="stylesheet"
-  />
-  <style>
-    /* Reset & base styles */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body { height: 100%; font-family: 'Quicksand', sans-serif; background: #f5f5f5; color: #2f2f2f; scroll-behavior: smooth; }
-    body { padding-top: 80px; }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cakes - Dolcidea</title>
 
-    /* Navigation bar */
-    nav {
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
+
+  <style>
+    .navbar {
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(0,0,0,0.85);
+      background: rgba(0, 0, 0, 0.85);
       display: flex;
       justify-content: center;
       padding: 1rem 2rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       z-index: 1000;
     }
-    nav ul {
+
+    .navbar ul {
       display: flex;
-      gap: 2rem;
       list-style: none;
+      gap: 2rem;
+      padding: 0;
+      margin: 0;
     }
-    nav ul li a {
-      color: #f5f5f5;
+
+    .navbar ul li a {
       text-decoration: none;
+      color: #f5f5f5;
       font-weight: 600;
       font-size: 1.1rem;
-      transition: color 0.3s;
+      transition: color 0.3s ease;
     }
-    nav ul li a:hover {
+
+    .navbar ul li a:hover {
       color: #d4af37;
     }
 
-    /* Cakes section */
-    .container { max-width: 1200px; margin: 0 auto; padding: 2rem; }
-    h1 { margin-bottom: 1.5rem; text-align: center; }
+    body {
+      padding-top: 80px; /* To prevent navbar from overlapping content */
+    }
+
+    body {
+      font-family: 'Quicksand', sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 2rem;
+    }
+
+    /* New h1 styling with gold outline and fancy font */
+    h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 4rem;
+      color: #2f2f2f;
+      text-align: center;
+      margin-bottom: 2rem;
+      text-shadow:
+        -1px -1px 0 #d4af37,
+         1px -1px 0 #d4af37,
+        -1px  1px 0 #d4af37,
+         1px  1px 0 #d4af37;
+      user-select: none;
+    }
 
     .menu-section {
       display: flex;
@@ -54,79 +75,59 @@
     }
     .menu-item {
       display: flex;
-      width: 100%;
+      background: white;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       max-width: 800px;
-      background: #fff;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       border-radius: 12px;
       overflow: hidden;
     }
-    .menu-item:nth-child(even) { flex-direction: row-reverse; }
+    .menu-item:nth-child(even) {
+      flex-direction: row-reverse;
+    }
     .menu-img {
       width: 50%;
-      height: 100%;
       object-fit: cover;
     }
     .menu-desc {
-      width: 50%;
       padding: 1.5rem;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      width: 50%;
     }
-    .menu-desc h2 { margin-bottom: 0.75rem; font-size: 1.5rem; }
-    .menu-desc p { font-size: 1rem; line-height: 1.5; }
-
-    @media (max-width: 768px) {
-      .menu-item {
-        flex-direction: column !important;
-      }
-      .menu-img, .menu-desc {
-        width: 100%;
-      }
-      nav ul {
-        flex-direction: column;
-        gap: 1rem;
-      }
+    h2 {
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
 <body>
-
-  <!-- Navigation -->
-  <nav>
+  <nav class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="cakes.html" aria-current="page">Cakes</a></li>
+      <li><a href="cakes.html">Cakes</a></li>
       <li><a href="icecreams.html">Ice Creams</a></li>
       <li><a href="reservations.html">Reservations</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About Us</a></li>
     </ul>
   </nav>
-
-  <div class="container">
-    <h1>Cakes Menu</h1>
-    <section class="menu-section">
-      <div class="menu-item">
-        <img class="menu-img" src="cake1.jpg" alt="Elegant Strawberry Cake">
-        <div class="menu-desc">
-          <h2>Elegant Strawberry Cake</h2>
-          <p>Fresh strawberries, fluffy sponge, and silky cream layers. Perfect for every celebration.</p>
-        </div>
+  <h1>Cakes Menu</h1>
+  <section class="menu-section">
+    <div class="menu-item">
+      <img class="menu-img" src="Strawberry_Cake.jpg" alt="Cake 1" />
+      <div class="menu-desc">
+        <h2>Elegant Strawberry Cake</h2>
+        <p>Fresh strawberries, fluffy sponge, and silky cream layers. Perfect for every celebration.</p>
       </div>
-
-      <div class="menu-item">
-        <img class="menu-img" src="cake2.jpg" alt="Chocolate Fantasy">
-        <div class="menu-desc">
-          <h2>Chocolate Fantasy</h2>
-          <p>Rich dark chocolate layers with a light hazelnut cream filling. A delight for chocoholics.</p>
-        </div>
+    </div>
+    <div class="menu-item">
+      <img class="menu-img" src="Chocolate_Cake.jpg" alt="Cake 2" />
+      <div class="menu-desc">
+        <h2>Chocolate Fantasy</h2>
+        <p>Rich dark chocolate layers with a light hazelnut cream filling. A delight for chocoholics.</p>
       </div>
-
-      <!-- Add more cake items as needed -->
-    </section>
-  </div>
-
+    </div>
+    <!-- Add more items as needed -->
+  </section>
 </body>
 </html>
