--- a/index.html
+++ b/index.html
@@ -95,6 +95,31 @@
       user-select: none;
     }
 
+    /* Section styles */
+    section {
+      padding: 100px 20px 60px;
+      max-width: 900px;
+      margin: 0 auto;
+      scroll-margin-top: 80px; /* to offset fixed nav */
+    }
+
+    section h2 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      color: #d4af37;
+      text-align: center;
+    }
+
+    section p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      text-align: center;
+      max-width: 700px;
+      margin: 0 auto 2rem auto;
+    }
+
+    /* Responsive */
     @media (max-width: 768px) {
       .hero-title {
         font-size: 4rem;
@@ -130,5 +155,40 @@
     <h1 class="hero-title">Dolcidea</h1>
   </section>
 
+  <!-- Cakes Section -->
+  <section id="cakes">
+    <h2>Cakes</h2>
+    <p>Discover our delightful cakes made fresh daily using the finest ingredients.</p>
+    <!-- Add more cake details here -->
+  </section>
+
+  <!-- Ice Creams Section -->
+  <section id="icecreams">
+    <h2>Ice Creams</h2>
+    <p>Enjoy our authentic Italian gelato in a variety of classic and seasonal flavors.</p>
+    <!-- Add ice cream details here -->
+  </section>
+
+  <!-- Reservations Section -->
+  <section id="reservations">
+    <h2>Reservations</h2>
+    <p>Book your table in advance to enjoy a sweet escape at Dolcidea.</p>
+    <!-- Add reservation form or details -->
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Get in touch with us for inquiries, orders, or just to say hello.</p>
+    <!-- Add contact info or form -->
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Us</h2>
+    <p>Dolcidea is your sweet escape into authentic Italian gelato, handcrafted daily with passion and tradition.</p>
+    <!-- Add more about details -->
+  </section>
+
 </body>
-</html> 
+</html>
